--- a/info_me.html
+++ b/info_me.html
@@ -76,8 +76,8 @@ img {
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="./index.html">Projects</a></li>
-            <li><a href="info_me.html">About Me</a></li>
+            <li ><a href="./index.html">Projects</a></li>
+            <li class="active"><a href="info_me.html">About Me</a></li>
             <li><a href="References.html">References</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -89,33 +89,24 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/CSB_2D.JPG" alt="Charging Shutdown Board Layout" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/rod.jpg" alt="" style="margin:40px -25px">         
  </div>
         
 
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">Charging Shutdown Board </h1>
-                <font size "1"> fall '17 </font>
-                    
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Altium, HV electronics safety </font><br>
-                  <font color=#000000>soft skills: </font><font color=#7F7E7E>iterative design review, team coordination </font></p>
+                  <h1 style="margin:40px 0px">Rod Bayliss III </h1>
+                <p class="lead"> Electrical Engineer </p>
 
                 <p > 
-                  Since summer of 2017, my main commitment has been building an electric racecar with MIT’s FSAE Electric Racecar Team. I love being a part of MIT FSAE because everyone is driven by a clear goal: making our car run as fast as possible. Being part of a team that is characterized by this dedication to quality drives me and every member to be the best engineer possible. 
-
+I look at Electrical Engineering the way my girlfriend looks at art. She likes the way it makes her feel and understanding a new way to see the world. EE has shown me a new way to look at the world. No matter how huge or complex an electrical system is, you can always break it down into simple elements and work through it to figure out what the system does. Using that simplicity to build real things is a gift I’ve only found in electrical engineering. 
+<br> <br> That’s the reason I spent days optimizing my CPU for Computation Structures after I’d already gotten an A in the class just to see if I could. That’s why I spend all of my Saturdays sitting in shop designing and soldering my board for FSAE to see my project materialize.
+ Math isn’t hard. Anyone can do electrical engineering because they’re good at it, but you’re not going to find someone who enjoys it more than I do. 
 <br> <br>
-                  This semester I've been working on the charging shutdown board. At a high level, this board determines whether or not our car is safe to charge. The previous board reflected a somewhat clumsy and esoteric solution to this problem. It featured a binary signal that determined safety and then charged our car using a pre-set charging profile. This process was so poorly documented and non-intuitive that only three people on the team knew how to use it.  
+ <a href=https://www.linkedin.com/in/rod-bayliss-iii-388b33125/> LinkedIn</a>
 
-<br> <br>
-                  I made several improvements. 
-                  First, I added a microcontroller to process the Battery Management System outputs. This lets us determine how much power we want our charger to output based on how charged the battery is and to compile more data about our battery and charging characteristics. 
-                Second, I enabled a customizable charging profile. By sending CAN messages with detailed charging data instead of a binary signal, we’re able to change our charging profile based on factors such as how quickly we want to charge our system or the available power supply of our charger. 
-
-<br> <br>
-                  Ultimately, I took a board that was necessary for our car to function and made it a feature that allows our battery to be managed as flexibly and efficiently as possible. 
-</p>
+                  </p>
 
                   </div>
 
