--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
 -->
         <!-- Pagination -->
-        <div class="row text-center">
+      <!--   <div class="row text-center">
             <div class="col-lg-12">
                 <ul class="pagination">
                     <li>
@@ -152,20 +152,20 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
 		<hr>
 
         <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Example.com 2015</p>
-                </div>
-            </div>
+        <!-- <footer> -->
+            <!-- <div class="row"> -->
+                <!-- <div class="col-lg-12"> -->
+                    <!-- <p>Copyright &copy; Example.com 2015</p> -->
+                <!-- </div> -->
+            <!-- </div> -->
             <!-- /.row -->
-        </footer>
+        <!-- </footer> -->
 
     </div>
     <!-- /.container -->
