Adding new photos and .334 and .115

--- a/index.html
+++ b/index.html
@@ -64,13 +64,33 @@
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src=".\pictures\CSB_2D.JPG"" alt="">
+                    <img class="img-responsive" src=".\pictures\ChargerShutdownBox.jpg" alt="Layout of Charger Shutdown Board">
                 </a>
                 <h3>
                     <a href="./chargingshutdownboard.html">Charging Shutdown Board</a>
                 </h3>
                 <p>As a member of the MIT FSAE Electric Racecar Team, I redesigned our charging shutdown board, making it more efficient and easy to use. </p>
             </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
+                </a>
+                <h3>
+                    <a href="./chargingshutdownboard.html">6.334 Design Project</a>
+                </h3>
+                <p> 6.334 Design Buck Converter </p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
+                </a>
+                <h3>
+                    <a href="./chargingshutdownboard.html">6.115 Final Project </a>
+                </h3>
+                <p> 6.115 Cart</p>
+            </div>
+		</div>
+		<div clas="row">
             <div class="col-md-4 portfolio-item">
                 <a href="./rle.html">
                     <img class="img-responsive" src="./pictures/rle.jpg">
@@ -82,7 +102,7 @@
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
-                    <img class="img-responsive" src="./pictures/seeboat.jpg" alt="">
+                    <img class="img-responsive" src="./pictures/ModernSeeBoat.jpg" alt="">
                 </a>
                 <h3>
                     <a href="./seeboat.html">SeeBoat</a>
@@ -90,9 +110,11 @@
                 <p>SeeBoat is a fleet of remote controlled boats that measure and display water quality in real time. I worked on the electrical engineering end of this project, calibrating sensors and making sure they all worked simultaneously to deliver realtime data</p>
             </div>
         </div>
+	</div>
         <!-- /.row -->
 
         <!-- Projects Row -->
+		<!--
         <div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="#">
@@ -104,6 +126,7 @@
                 <p>I coded the front and and back end of the challenge for the Coding version of Zero Robotics.</p>
             </div>
            
+		-->
 <!--
             <div class="col-md-4 portfolio-item">
                 <a href="#">
