Adjusting .334 Page a little more

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
                 </a>
                 <h3>
-                    <a href="./chargingshutdownboard.html">6.334 Design Project</a>
+                    <a href="./6.334.html">6.334 Power Electronics Design Project</a>
                 </h3>
                 <p> 6.334 Design Buck Converter </p>
             </div>
@@ -96,7 +96,7 @@
                     <img class="img-responsive" src="./pictures/rle.jpg">
                 </a>
                 <h3>
-                    <a href="./rle.html">Research Laboratory of Electronics</a>
+                    <a href="./rle.html">Power Electronics Group UROP</a>
                 </h3>
                 <p>With the Power Electronics Group at the Research Laboratory of Electronics at MIT, I’ve been researching high frequency magnetic materials for inductor and transformer cores. </p>
             </div>
