--- a/rle.html
+++ b/rle.html
@@ -79,7 +79,6 @@ img {
           <ul class="nav navbar-nav">
             <li class="active"><a href="./index.html">Projects</a></li>
             <li><a href="info_me.html">About Me</a></li>
-                        <li><a href="info_me.html">References</a></li>
 
           </ul>
         </div><!--/.nav-collapse -->
@@ -98,8 +97,8 @@ img {
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">Charging Shutdown Board </h1>
-                <font size "1"> fall '17 </font>
+                  <h1 style="margin:40px 0px">Power Electronics Group UROP</h1>
+                <font size "1">Spring '18 </font>
                   
                   <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> advanced excel, high voltage safety </font><br>
                   <font color=#000000>soft skills: </font><font color=#7F7E7E>preparing data for publication, work in an academic setting </font></p>
