--- a/6.334.html
+++ b/6.334.html
@@ -88,39 +88,24 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/CSB_2D.JPG" alt="Charging Shutdown Board Layout" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/BuckLTSpice.PNG" alt="Charging Shutdown Board Layout" style="margin:40px -25px"  >         
  </div>
         
 
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">Charging Shutdown Board </h1>
-                <font size "1"> fall '17 </font>
+                  <h1 style="margin:40px 0px">6.334 Power Electronics: Design of a Buck Converter</h1>
+                <font size "1">spring '18 </font>
                     
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Altium, HV electronics safety </font><br>
-                  <font color=#000000>soft skills: </font><font color=#7F7E7E>iterative design review, team coordination </font></p>
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> </font><br>
+                  <font color=#000000>soft skills: </font><font color=#7F7E7E></font></p>
 
-                <p > 
-                  Since summer of 2017, my main commitment has been building an electric racecar with MIT’s FSAE Electric Racecar Team. I love being a part of MIT FSAE because everyone is driven by a clear goal: making our car run as fast as possible. Being part of a team that is characterized by this dedication to quality drives me and every member to be the best engineer possible. 
-
-<br> <br>
-                  This semester I've been working on the charging shutdown board. At a high level, this board determines whether or not our car is safe to charge. The previous board reflected a somewhat clumsy and esoteric solution to this problem. It featured a binary signal that determined safety and then charged our car using a pre-set charging profile. This process was so poorly documented and non-intuitive that only three people on the team knew how to use it.  
-
-<br> <br>
-                  I made several improvements. 
-                  First, I added a microcontroller to process the Battery Management System outputs. This lets us determine how much power we want our charger to output based on how charged the battery is and to compile more data about our battery and charging characteristics. 
-                Second, I enabled a customizable charging profile. By sending CAN messages with detailed charging data instead of a binary signal, we’re able to change our charging profile based on factors such as how quickly we want to charge our system or the available power supply of our charger. 
-
-<br> <br>
-                  Ultimately, I took a board that was necessary for our car to function and made it a feature that allows our battery to be managed as flexibly and efficiently as possible. 
-</p>
 
                   </div>
 
-                  </div>
 
-             </div>
+	 </div>
 
 
 </div>
