Adding some files, adding favicon support zap and cleaning up some stuff

--- a/6.334.html
+++ b/6.334.html
@@ -33,9 +33,9 @@ img {
     <meta name="description" content="">
     <meta name="author" content="">
     <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
-    <link rel = "icon" href = "if_Equipment_131921.ico">
+    <link rel = "icon" href = "favicon.ico">
 
-    <title>Charging Shutdown Board</title>
+    <title>6.334 Design Project</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
