--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+    <link rel = "icon" href = "favicon.ico">
     <title>Rod Bayliss III</title>
 
     <!-- Bootstrap Core CSS -->
@@ -81,17 +82,6 @@
                 <p> 6.334 Design Buck Converter </p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
-                </a>
-                <h3>
-                    <a href="./chargingshutdownboard.html">6.115 Final Project </a>
-                </h3>
-                <p> 6.115 Cart</p>
-            </div>
-		</div>
-		<div clas="row">
-            <div class="col-md-4 portfolio-item">
                 <a href="./rle.html">
                     <img class="img-responsive" src="./pictures/rle.jpg">
                 </a>
@@ -99,6 +89,26 @@
                     <a href="./rle.html">Power Electronics Group UROP</a>
                 </h3>
                 <p>With the Power Electronics Group at the Research Laboratory of Electronics at MIT, I’ve been researching high frequency magnetic materials for inductor and transformer cores. </p>
+            </div>
+		</div>
+		<div clas="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src=".\pictures\Apple_logo.jpeg" alt="Apple Logo">
+                </a>
+                <h3>
+                    <a href="./apple.html">Apple Internship</a>
+                </h3>
+                <p> Apple Mac Diagnostics Internship</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="#">
+                    <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
+                </a>
+                <h3>
+                    <a href="./6.115.html">6.115 Final Project </a>
+                </h3>
+                <p> 6.115 Cart</p>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="#">
