--- a/seeboat.html
+++ b/seeboat.html
@@ -33,7 +33,7 @@ img {
     <meta name="description" content="">
     <meta name="author" content="">
     <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
-    <link rel = "icon" href = "if_Equipment_131921.ico">
+    <link rel = "icon" href = "favicon.ico">
 
     <title>SeeBoat</title>
 
