--- a/6.334.html
+++ b/6.334.html
@@ -100,6 +100,10 @@ img {
                     
                   <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> </font><br>
                   <font color=#000000>soft skills: </font><font color=#7F7E7E></font></p>
+				  <p>
+				  You can read the report <a href="6.334 Design Project Report.pdf" target="_blank" ><u>here</u></a>
+
+				  </p>
 
 
                   </div>
