Removing References from Seeboat

--- a/apple.html
+++ b/apple.html
@@ -98,8 +98,8 @@ img {
                   <h1 style="margin:40px 0px">Apple Mac Diagnostics Internship</h1>
                 <font size "1">summer '18</font>
                     
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> </font><br>
-                  <font color=#000000>soft skills: </font><font color=#7F7E7E></font></p>
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> custom Linux distro development </font><br>
+                  <font color=#000000>soft skills: </font><font color=#7F7E7E>cross-functional interaction with external teams</font></p>
 
 
                   </div>
