--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="chargingshutdownboard.html">
                     <img class="img-responsive" src=".\pictures\ChargerShutdownBox.jpg" alt="Layout of Charger Shutdown Board">
                 </a>
                 <h3>
@@ -73,7 +73,7 @@
                 <p>As a member of the MIT FSAE Electric Racecar Team, I redesigned our charging shutdown board, making it more efficient and easy to use. </p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="6.334.html">
                     <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
                 </a>
                 <h3>
@@ -93,7 +93,7 @@
 		</div>
 		<div clas="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="./apple.html">
                     <img class="img-responsive" src=".\pictures\Apple_logo.jpeg" alt="Apple Logo">
                 </a>
                 <h3>
@@ -102,7 +102,7 @@
                 <p> Apple Mac Diagnostics Internship</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="./6.115.html">
                     <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
                 </a>
                 <h3>
@@ -111,7 +111,7 @@
                 <p> 6.115 Cart</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="./seeboat.html">
                     <img class="img-responsive" src="./pictures/ModernSeeBoat.jpg" alt="">
                 </a>
                 <h3>
