Adding BMS and 334 content

--- a/bms.html
+++ b/bms.html
@@ -32,9 +32,10 @@ img {
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
     <link rel = "icon" href = "favicon.ico">
 
-    <title>6.334 Design Project</title>
+    <title>BMS Head Unit</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -87,27 +88,28 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/BuckLTSpice.PNG" alt="Charging Shutdown Board Layout" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/TempBatteryModule.jpg" alt="Picture of Battery Module" style="margin:40px -25px"  >         
  </div>
         
 
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">6.334 Power Electronics: Design of a Buck Converter</h1>
-                <font size "1">spring '18 </font>
+                  <h1 style="margin:40px 0px">Battery Managemnt System Head Unit </h1>
+                <font size "1"> fall '18 </font>
                     
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Power Electronics design, Simulink and SPICE simulation</font><br>
-				  <p>
-				  One of my favorite classes I've taken at MIT has been 6.334, a graduate Power Electronics class. We were tasked to design a buck converter to hit certain specifications such as 90% efficiency and 3% voltage ripple. I loved this project so much because I had to design and specify every part of the converter. From choosing the switches to minimise the switches' loss, ensuring that their die temperature didn't go too high, the controls to ensure that I met my transient requirements, etc. This project showed me the most of what I love about EE: using math to make good, sound decisions to come up with an effective design. You can read the report <a href="6.334 Design Project Report.pdf" target="_blank" ><u>here</u></a>
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Altium, HV electronics</font><br>
+                  <font color=#000000>soft skills: </font><font color=#7F7E7E>iterative design review, team coordination </font></p>
 
-				  </p>
-
+                <p > 
+				This year I'm working on the BMS Head unit for MIT FSAE. It's main job is to communicate with the segment boards to relay thermistor readings and cell voltages to the rest of the car and generate a fault signal if anything goes wrong (e.g. battery pack getting too hot).
+				</p>
 
                   </div>
 
+                  </div>
 
-	 </div>
+             </div>
 
 
 </div>
