--- a/index.html
+++ b/index.html
@@ -102,6 +102,15 @@
                 <p> Apple Mac Diagnostics Internship</p>
             </div>
             <div class="col-md-4 portfolio-item">
+                <a href="./bms.html">
+                    <img class="img-responsive" src=".\pictures\TempBatteryModule.jpg" alt="Picture of Battery Module">
+                </a>
+                <h3>
+                    <a href="./bms.html">BMS Head Unit</a>
+                </h3>
+                <p>FSAE Battery Management System Head Unit</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
                 <a href="./6.115.html">
                     <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
                 </a>
@@ -110,6 +119,10 @@
                 </h3>
                 <p> 6.115 Cart</p>
             </div>
+
+
+			<!--
+
             <div class="col-md-4 portfolio-item">
                 <a href="./seeboat.html">
                     <img class="img-responsive" src="./pictures/ModernSeeBoat.jpg" alt="">
@@ -121,6 +134,7 @@
             </div>
         </div>
 	</div>
+			-->
         <!-- /.row -->
 
         <!-- Projects Row -->
