Adding more projects to main page, updating some projects information and shtuff

--- a/6.334.html
+++ b/6.334.html
@@ -87,7 +87,7 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/BuckLTSpice.PNG" alt="Charging Shutdown Board Layout" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/334_requirements_table.PNG" alt="Table of predidicted performance v. requirement of buck converter" style="margin:40px -25px"  >         
  </div>
         
 
