--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img class="img-responsive" src=".\pictures\ChargerShutdownBox.jpg" alt="Layout of Charger Shutdown Board">
                 </a>
                 <h3>
-                    <a href="./chargingshutdownboard.html">Charging Shutdown Board</a>
+                    <a href="./chargingshutdownboard.html">MIT FSAE Charging Shutdown Board</a>
                 </h3>
                 <p>As a member of the MIT FSAE Electric Racecar Team, I redesigned our charging shutdown board, making it more efficient and easy to use. </p>
             </div>
@@ -82,16 +82,26 @@
                 <p> 6.334 Design Buck Converter </p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="./rle.html">
-                    <img class="img-responsive" src="./pictures/rle.jpg">
+                <a href="./rle2.html">
+                    <img class="img-responsive" src="./pictures/Proximity_Effect.jpg">
                 </a>
                 <h3>
-                    <a href="./rle.html">Power Electronics Group UROP</a>
+                    <a href="./rle2.html">Power Electronics Group UROP Fall '18</a>
                 </h3>
-                <p>With the Power Electronics Group at the Research Laboratory of Electronics at MIT, I’ve been researching high frequency magnetic materials for inductor and transformer cores. </p>
+				<p>I’m currently researching designs for an efficient, low loss inductor at a  high current, high frequency regime. </p>
             </div>
 		</div>
-		<div clas="row">
+
+		<div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="./rle1.html">
+                    <img class="img-responsive" src="./pictures/toroids.jpg" alt="Several wound toroids">
+                </a>
+                <h3>
+                    <a href="./rle1.html">Power Electronics Group UROP Spring '18</a>
+                </h3>
+				<p>I researched high frequency magnetic materials for power electronic systems.</p>
+            </div>
             <div class="col-md-4 portfolio-item">
                 <a href="./apple.html">
                     <img class="img-responsive" src=".\pictures\Apple_logo.jpeg" alt="Apple Logo">
@@ -110,19 +120,18 @@
                 </h3>
                 <p>FSAE Battery Management System Head Unit</p>
             </div>
+		</div>
+
+		<div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="./6.115.html">
-                    <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top">
+                    <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top" >
                 </a>
                 <h3>
                     <a href="./6.115.html">6.115 Final Project </a>
                 </h3>
                 <p> 6.115 Cart</p>
             </div>
-
-
-			<!--
-
             <div class="col-md-4 portfolio-item">
                 <a href="./seeboat.html">
                     <img class="img-responsive" src="./pictures/ModernSeeBoat.jpg" alt="">
@@ -132,16 +141,8 @@
                 </h3>
                 <p>SeeBoat is a fleet of remote controlled boats that measure and display water quality in real time. I worked on the electrical engineering end of this project, calibrating sensors and making sure they all worked simultaneously to deliver realtime data</p>
             </div>
-        </div>
-	</div>
-			-->
-        <!-- /.row -->
-
-        <!-- Projects Row -->
-		<!--
-        <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="#">
+                <a href="./zr.html">
                     <img class="img-responsive" src="./pictures/zr.jpg" alt="">
                 </a>
                 <h3>
@@ -149,9 +150,9 @@
                 </h3>
                 <p>I coded the front and and back end of the challenge for the Coding version of Zero Robotics.</p>
             </div>
-           
-		-->
-<!--
+		</div>
+
+		<!--	
             <div class="col-md-4 portfolio-item">
                 <a href="#">
                     <img class="img-responsive" src="http://lorempixel.com/700/400/nature/5" alt="">
@@ -171,7 +172,8 @@
                 <p>Upon yielding, kind sea subdue very seed sixth them lesser one lesser there earth days were multiply so sixth gathering fifth that man fowl made.</p>
             </div>
         </div>
--->
+		-->
+	
         <!-- Pagination -->
       <!--   <div class="row text-center">
             <div class="col-lg-12">
@@ -202,7 +204,7 @@
         </div> -->
         <!-- /.row -->
 
-		<hr>
+		<!--<hr>-->
 
         <!-- Footer -->
         <!-- <footer> -->
