--- a/rle1.html
+++ b/rle1.html
@@ -105,14 +105,14 @@ img {
 
                 <p > 
 
-                  At the end of taking Circuits and Electronics last semester, one of my TAs recommended me for a research position at the Research Laboratory of Electronics. With the Power Electronics Group I’ve been researching high frequency magnetic materials for inductor and transformer cores. 
+                  At the end of taking Circuits and Electronics last semester, one of my TAs recommended me for a research position at the Research Laboratory of Electronics. With the Power Electronics Group I researched high frequency magnetic materials for power magnetics. 
 
 <br> <br>
                   A lot of magnetic materials used in industry are characterized for frequencies below 750 kHz and above 2 MHz. However, there are some materials which may perform well at frequencies within that gap that we simply don’t know about. My research focuses on the operation of these materials at frequencies in that gap. Specifically, I set up the test circuit to accurately measure the voltage gain of an LC circuit and extrapolate from that the power loss of our core over a range of frequencies and then compile that data for publication.  Finding materials that operate well in this frequency range will allow circuit designers to potentially decrease the size and increase the efficiency of their circuits with little downside.
  
 
 <br> <br>
-                  My research has taught me how to independently contribute to R&D in a meaningful way. Working with prototypes as they’re being tested can be dangerous in a way that packaged batteries aren’t. Making sure the data you collect is meaningful, accurate, and understandable is a huge part of what makes research good. Learning about power electronics has opened my eyes to a new side of EE, and I’m excited to continue my research into the Spring.
+                  My research has taught me how to independently contribute to R&D in a meaningful way. Working with prototypes as they’re being tested can be dangerous in a way that packaged batteries aren’t. Making sure the data you collect is meaningful, accurate, and understandable is a huge part of what makes research good. 
 
 
 <br> <br>
