Fixing ZR icon and RLE1 title

--- a/zr.html
+++ b/zr.html
@@ -1,11 +1,3 @@
-<!--file:///Users/katherinepaseman/dropbox%20(mit)/Kat%20Portfolio/index.html -->
-
-
-<!--lines you have to change: 45, 109, 110, 114, 117, 121, 124-->
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
   <style>
@@ -39,8 +31,7 @@ img {
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
-    <link rel = "icon" href = "if_Equipment_131921.ico">
+    <link rel = "icon" href = "favicon.ico">
 
     <title>Zero Robotics</title>
 
