--- a/rle1.html
+++ b/rle1.html
@@ -1,4 +1,3 @@
-<!--file:///Users/katherinepaseman/dropbox%20(mit)/Kat%20Portfolio/index.html -->
 <!DOCTYPE html>
 <html lang="en">
   <style>
@@ -35,7 +34,7 @@ img {
     <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
     <link rel = "icon" href = "favicon.ico">
 
-    <title>RLE</title>
+    <title>Power Electronics UROP</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
