Changing spring urop title

--- a/rle1.html
+++ b/rle1.html
@@ -96,7 +96,7 @@ img {
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">Power Electronics Group UROP</h1>
+                  <h1 style="margin:40px 0px">Investigation of High Frequency Magnetic Materials</h1>
                 <font size "1">Spring '18 </font>
                   
                   <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> advanced excel, high voltage safety </font><br>
