Setting up for Tesla and 6.332 documentation, adding more picures

--- a/info_me.html
+++ b/info_me.html
@@ -33,9 +33,9 @@ img {
     <meta name="description" content="">
     <meta name="author" content="">
     <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
-    <link rel = "icon" href = "if_Equipment_131921.ico">
+    <link rel = "icon" href = "favicon.ico">
 
-    <title>Charging Shutdown Board</title>
+    <title>About Me</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -88,7 +88,7 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/rod.jpg" alt="" style="margin:40px -25px">         
+<img class="img-responsive" src="./pictures/Tapestry.jpg" alt="" style="margin:40px -25px">         
  </div>
         
 
