--- a/bms.html
+++ b/bms.html
@@ -88,7 +88,7 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/TempBatteryModule.jpg" alt="Picture of Battery Module" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/BMS head altium.png" alt="Picture of Battery Module" style="margin:40px -25px"  >         
  </div>
         
 
