--- a/index.html
+++ b/index.html
@@ -64,24 +64,6 @@
         <!-- Projects Row -->
         <div class="row">
             <div class="col-md-4 portfolio-item">
-                <a href="chargingshutdownboard.html">
-                    <img class="img-responsive" src=".\pictures\ChargerShutdownBox.jpg" alt="Layout of Charger Shutdown Board">
-                </a>
-                <h3>
-                    <a href="./chargingshutdownboard.html">MIT FSAE Charging Shutdown Board</a>
-                </h3>
-                <p>As a member of the MIT FSAE Electric Racecar Team, I redesigned our charging shutdown board, making it more efficient and easy to use. </p>
-            </div>
-            <div class="col-md-4 portfolio-item">
-                <a href="6.334.html">
-                    <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
-                </a>
-                <h3>
-                    <a href="./6.334.html">6.334 Power Electronics Design Project</a>
-                </h3>
-                <p> 6.334 Design Buck Converter </p>
-            </div>
-            <div class="col-md-4 portfolio-item">
                 <a href="./rle2.html">
                     <img class="img-responsive" src="./pictures/Proximity_Effect.jpg">
                 </a>
@@ -90,9 +72,45 @@
                 </h3>
 				<p>I’m currently researching designs for an efficient, low loss inductor at a  high current, high frequency regime. </p>
             </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="6.332.html">
+					<img class="img-responsive" src=".\pictures\IGBT Inverter.png">
+                </a>
+                <h3>
+                    <a href="./6.332.html">6.332 Advanced Power Electronics Design Project</a>
+                </h3>
+                <p>Field Oriented Control of a Three Phase Motor</p>
+            </div>
+            <div class="col-md-4 portfolio-item">
+                <a href="./tesla.html">
+                    <img class="img-responsive" src=".\pictures\Tesla Logo.png" alt="Tesla Motors Logo" width=50% >
+                </a>
+                <h3>
+                    <a href="./Tesla.html">Tesla Motors Internship</a>
+                </h3>
+                <p>Magnetics Simulation of PCB based magnetics and magnetic material characterization</p>
+            </div>
 		</div>
-
 		<div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="./bms.html">
+                    <img class="img-responsive" src=".\pictures\TempBatteryModule.jpg" alt="Picture of Battery Module">
+                </a>
+                <h3>
+                    <a href="./bms.html">BMS Head Unit</a>
+                </h3>
+                <p>FSAE Battery Management System Head Unit</p>
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+                <a href="6.334.html">
+                    <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
+                </a>
+                <h3>
+                    <a href="./6.334.html">6.334 Power Electronics Design Project</a>
+                </h3>
+                <p> 6.334 Design of a Buck Converter </p>
+            </div>
             <div class="col-md-4 portfolio-item">
                 <a href="./rle1.html">
                     <img class="img-responsive" src="./pictures/toroids.jpg" alt="Several wound toroids">
@@ -101,6 +119,17 @@
                     <a href="./rle1.html">Power Electronics Group UROP Spring '18</a>
                 </h3>
 				<p>I researched high frequency magnetic materials for power electronic systems.</p>
+            </div>
+		</div>
+		<div class="row">
+            <div class="col-md-4 portfolio-item">
+                <a href="chargingshutdownboard.html">
+                    <img class="img-responsive" src=".\pictures\ChargerShutdownBox.jpg" alt="Layout of Charger Shutdown Board">
+                </a>
+                <h3>
+                    <a href="./chargingshutdownboard.html">MIT FSAE Charging Shutdown Board</a>
+                </h3>
+                <p>As a member of the MIT FSAE Electric Racecar Team, I redesigned our charging shutdown board, making it more efficient and easy to use. </p>
             </div>
             <div class="col-md-4 portfolio-item">
                 <a href="./apple.html">
@@ -112,18 +141,6 @@
                 <p> Apple Mac Diagnostics Internship</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="./bms.html">
-                    <img class="img-responsive" src=".\pictures\TempBatteryModule.jpg" alt="Picture of Battery Module">
-                </a>
-                <h3>
-                    <a href="./bms.html">BMS Head Unit</a>
-                </h3>
-                <p>FSAE Battery Management System Head Unit</p>
-            </div>
-		</div>
-
-		<div class="row">
-            <div class="col-md-4 portfolio-item">
                 <a href="./6.115.html">
                     <img class="img-responsive" src=".\pictures\6.115Cart.jpg" alt="Picture of Cart with PCB on top" >
                 </a>
@@ -132,6 +149,8 @@
                 </h3>
                 <p> 6.115 Cart</p>
             </div>
+	</div>
+		<div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="./seeboat.html">
                     <img class="img-responsive" src="./pictures/ModernSeeBoat.jpg" alt="">
