--- a/info_me.html
+++ b/info_me.html
@@ -99,9 +99,9 @@ img {
                 <p class="lead"> Electrical Engineer </p>
 
                 <p > 
-I look at Electrical Engineering the way my girlfriend looks at art. She likes the way it makes her feel and understanding a new way to see the world. EE has shown me a new way to look at the world. No matter how huge or complex an electrical system is, you can always break it down into simple elements and work through it to figure out what the system does. Using that simplicity to build real things is a gift I’ve only found in electrical engineering. 
-<br> <br> That’s the reason I spent days optimizing my CPU for Computation Structures after I’d already gotten an A in the class just to see if I could. That’s why I spend all of my Saturdays sitting in shop designing and soldering my board for FSAE to see my project materialize.
- Math isn’t hard. Anyone can do electrical engineering because they’re good at it, but you’re not going to find someone who enjoys it more than I do. 
+Ever since I was young, I’ve always been fascinated by moving energy around quickly and efficiently. Whether it be my dad’s supercharged mustang or different railways from around the world, I have loved looking at and learning about how things move fast. I thought I wanted to study engineering because I wanted to learn how the mechanisms and systems that captured my attention worked. The more I learn the more I realize the reason I want to become an engineer is that I want to make these systems better. 
+<br><br>
+I’ve decided to focus on power electronics because as humanity strives to use more renewable resources and greener forms of transportation, power electronics seriously limit the performance, size, and cost in these systems. Fundamentally, nature works against us when we try to make power electronics better: packing more and more energy into tighter and tighter spaces is an ambitious goal, and it is one I want to help achieve. 
 <br> <br>
  <a href=https://www.linkedin.com/in/rod-bayliss-iii-388b33125/> LinkedIn</a>
 
