--- a/rle2.html
+++ b/rle2.html
@@ -98,11 +98,14 @@ img {
           <br> <br> <br>
               <div class="header">
                   <h1 style="margin:40px 0px">High Power, High Frequency Magnetics Design</h1>
-                <font size "1">Fall '18 </font>
+                <font size "1">Fall '18 - Fall '19</font>
                   
                   <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> ANSYS Maxwell FEA, Magnetics design</font><br>
 				  <p>
-				  This semester I'm looking into designing a high power (~30 A), high frequency (13.56 MHz) inductor that aims to achieve double-sided conduction to reduce loss. From a previous UROP’s work, our group has developed a formula for generating efficient inductor designs given an inductance and volume that has been tested at lower current, lower frequency applications. This new design will allow a significant size reduction for power electronic system that depend on physically large air-core inductors which is beneficial for systems where volume is expensive such as in space or electric vehicles.
+				  This past year designed a high power (~78 A), high frequency (13.56 MHz) inductor that aims to achieve double-sided conduction to reduce loss. From a previous UROP’s work, our group has developed a formula for generating efficient inductor designs given an inductance and volume that has been tested at lower current, lower frequency applications. This new design will allow a significant size reduction for power electronic system that depend on physically large air-core inductors which is beneficial for systems where volume is expensive such as in space or electric vehicles.
+				  </p><p>
+					After many iterative designs through ANSYS Maxwell I reached a final design at the end of the fall semester. In the spring I sent out the designs for the ferrite discs to Fair-rite and manufactured the copper tube and polypropylene spacers. The fully assembled inductor is shown here on the left and is about 115 mm tall. This fall I'm designing a text fixture to accurately measure the Q of the inductor. Because the simulated Q of 1800 is so high, it's difficult to confidently measure such a low loss at the high power levels the inductor is designed for. The text fixture will minimize contact resistance between the inductor and the test circuit and allow me to accurately measure the inductor's performance.
+				  </p>
 
 <br> <br>
                  </p>
