--- a/6.332.html
+++ b/6.332.html
@@ -89,29 +89,19 @@ img {
           <br> <br> <br>
 <img class="img-responsive" src="./pictures/motor setup.jpg" alt="Motor and encoder assembled" style="margin:40px -25px"  >         
  </div>
-        
-
         <div class="column">
           <br> <br> <br>
               <div class="header">
                   <h1 style="margin:40px 0px">6.332 Advanced Power Electronics: FOC Motor Controller</h1>
-                <font size "1">spring '18 </font>
+                <font size "1">fall '18 </font>
                     
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Power Electronics design, Simulink and SPICE simulation</font><br>
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E>Motor control theory, firmware, PID control</font><br>
 				  <p>
-				  One of my favorite classes I've taken at MIT has been 6.334, a graduate Power Electronics class. We were tasked to design a buck converter to hit certain specifications such as 90% efficiency and 3% voltage ripple. I loved this project so much because I had to design and specify every part of the converter. From choosing the switches to minimise the switches' loss, ensuring that their die temperature didn't go too high, the controls to ensure that I met my transient requirements, etc. This project showed me the most of what I love about EE: using math to make good, sound decisions to come up with an effective design. You can read the report <a href="6.334 Design Project Report.pdf" target="_blank" ><u>here</u></a>
-
+				  In the fall of 2018 I took 6.332, an extension of 6.334, Graduate Power Electronics. This class, like .334, had a final project however it was completely open-ended, the project just had to be related to power electronics. I chose to write the firmware for a three phase motor controller using field oriented control (FOC). Being on FSAE, I was always interested in how our off-the-shelf motor controllers worked and wanted to see if I could create my own. The project ended up being pretty time consuming with lots of bugs to chase out but eventually I got the motor to spin. I wrote up a report on FOC and my experiences and you can read it.t <a href="6.332 Report.pdf" target="_blank" ><u>here</u></a>. The motor used was a 650 kv propdrive motor, the microcontroller was an STM32F413 (the same used on FSAE), and the power electronics were embedded on a nucleo <a href="http://st.com/en/evaluation-tools/p-nucleo-ihm001.html" target="_blank"><u>shield</u></a>
 				  </p>
-
-
                   </div>
-
-
 	 </div>
-
-
 </div>
-
 </div>
 
 
