--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <p>Field Oriented Control of a Three Phase Motor</p>
             </div>
             <div class="col-md-4 portfolio-item">
-                <a href="./tesla.html">
+                <a href="./Tesla.html">
                     <img class="img-responsive" src=".\pictures\Tesla Logo.png" alt="Tesla Motors Logo" width=50% >
                 </a>
                 <h3>
