Switching to single column

--- a/MEng.html
+++ b/MEng.html
@@ -35,7 +35,7 @@ img {
     <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
     <link rel = "icon" href = "favicon.ico">
 
-    <title>About Me</title>
+    <title>Power Electronics UROP</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -71,13 +71,15 @@ img {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+
           </button>
           <a class="navbar-brand" href="index.html">Rod Bayliss III</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="./index.html">Projects</a></li>
-            <li class="active"><a href="info_me.html">About Me</a></li>
+            <li class="active"><a href="./index.html">Projects</a></li>
+            <li><a href="info_me.html">About Me</a></li>
+
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -88,28 +90,23 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/RLEHeadshot.jpg" alt="" style="margin:40px -25px">         
+<img class="img-responsive" src="./pictures/tank.png" alt="" style="margin:40px -25px">         
  </div>
         
 
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">Rod Bayliss III </h1>
-                <p class="lead"> Electrical Engineer </p>
+                  <h1 style="margin:40px 0px">Design, Implementation, and Evaluation of High-Efficiency High-Power Radio-Frequency Inductors</h1>
+                <font size "1">Spring '20 - Fall '20</font>
+                  
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> RF Design and Experimentation, Mechanical Engineering</font><br>
+				  <p>
+				  </p><p>
+				  </p>
 
-                <p > 
-Whether it be my dad’s supercharged mustang or different railways systems around the world, I’ve always been fascinated by moving energy around quickly and efficiently. I pursued a career in engineering because I wanted to push these systems to the theoretical limit.
-With my work, I enjoy targeting the largest bottlenecks in the performance of a given system in order to maximize improvement and progress. I’ve decided to focus on power electronics because as humanity strives to use more renewable resources and greener forms of transportation, power electronics seriously limit the performance, size, and cost in these systems. Fundamentally, nature works against us when we try to make power electronics better: packing more and more energy into tighter and tighter spaces is an ambitious goal, and it is one I want to push to the fundamental limit.
-<!--
-Ever since I was young, I’ve always been fascinated by moving energy around quickly and efficiently. Whether it be my dad’s supercharged mustang or different railways from around the world, I have loved looking at and learning about how things move fast. I thought I wanted to study engineering because I wanted to learn how the mechanisms and systems that captured my attention worked. The more I learn the more I realize the reason I want to become an engineer is that I want to make these systems better. 
-<br><br>
-I’ve decided to focus on power electronics because as humanity strives to use more renewable resources and greener forms of transportation, power electronics seriously limit the performance, size, and cost in these systems. Fundamentally, nature works against us when we try to make power electronics better: packing more and more energy into tighter and tighter spaces is an ambitious goal, and it is one I want to help achieve. 
--->
 <br> <br>
- <a href=https://www.linkedin.com/in/rod-bayliss-iii-388b33125/> LinkedIn</a>
-
-                  </p>
+                 </p>
 
                   </div>
 
