--- a/index.html
+++ b/index.html
@@ -63,25 +63,40 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-10 portfolio-item">
+                <a href="./MEng.html">
+                    <img class="img-responsive" src="./pictures/ResonantTank.png">
+                </a>
+                <h3>
+                    <a href="./MEng.html">Power Electronics Group M.Eng</a>
+                </h3>
+				<p>For Master's work I both characterized the inductor designed for my undergraduate research and investigated new, high-density inductor designs. </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-10 portfolio-item">
                 <a href="./rle2.html">
-                    <img class="img-responsive" src="./pictures/Proximity_Effect.jpg">
+                    <img class="img-responsive" src="./pictures/MagneticCircuit.png">
                 </a>
                 <h3>
                     <a href="./rle2.html">Power Electronics Group UROP Fall '18</a>
                 </h3>
-				<p>I’m currently researching designs for an efficient, low loss inductor at a  high current, high frequency regime. </p>
+				<p>I designed an inductor which exhibits extremely low loss at a high current, high frequency regime. </p>
             </div>
-            <div class="col-md-4 portfolio-item">
+        </div>
+        <div class="row">
+            <div class="col-md-10 portfolio-item">
                 <a href="6.332.html">
-					<img class="img-responsive" src=".\pictures\IGBT Inverter.png">
+					<img class="img-responsive" src=".\pictures\Inverter TopDown.jpg">
                 </a>
                 <h3>
-                    <a href="./6.332.html">6.332 Advanced Power Electronics Design Project</a>
+                    <a href="./6.332.html">Custom 20 kW Traction Inverter</a>
                 </h3>
                 <p>Field Oriented Control of a Three Phase Motor</p>
             </div>
-            <div class="col-md-4 portfolio-item">
+		</div>
+		<div class="row">
+            <div class="col-md-10 portfolio-item">
                 <a href="./Tesla.html">
                     <img class="img-responsive" src=".\pictures\Tesla Logo.png" alt="Tesla Motors Logo" width=50% >
                 </a>
@@ -90,19 +105,21 @@
                 </h3>
                 <p>Magnetics Simulation of PCB based magnetics and magnetic material characterization</p>
             </div>
-		</div>
-		<div class="row">
-            <div class="col-md-4 portfolio-item">
+        </div>
+        <div class="row">
+            <div class="col-md-10 portfolio-item">
                 <a href="./bms.html">
-                    <img class="img-responsive" src=".\pictures\TempBatteryModule.jpg" alt="Picture of Battery Module">
+                    <img class="img-responsive" src=".\pictures\BMS Head.jpg" alt="Picture of Battery Module">
                 </a>
                 <h3>
                     <a href="./bms.html">BMS Head Unit</a>
                 </h3>
                 <p>FSAE Battery Management System Head Unit</p>
             </div>
+        </div>
+        <div class="row">
 
-            <div class="col-md-4 portfolio-item">
+            <div class="col-md-10 portfolio-item">
                 <a href="6.334.html">
                     <img class="img-responsive" src=".\pictures\Buck_operating.png" alt="Schematic of Simplified Buck Converter">
                 </a>
@@ -111,7 +128,9 @@
                 </h3>
                 <p> 6.334 Design of a Buck Converter </p>
             </div>
-            <div class="col-md-4 portfolio-item">
+        </div>
+        <div class="row">
+            <div class="col-md-10 portfolio-item">
                 <a href="./rle1.html">
                     <img class="img-responsive" src="./pictures/toroids.jpg" alt="Several wound toroids">
                 </a>
@@ -120,7 +139,8 @@
                 </h3>
 				<p>I researched high frequency magnetic materials for power electronic systems.</p>
             </div>
-		</div>
+        </div>
+        <!---
 		<div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="chargingshutdownboard.html">
@@ -169,7 +189,8 @@
                 </h3>
                 <p>I coded the front and and back end of the challenge for the Coding version of Zero Robotics.</p>
             </div>
-		</div>
+        </div>
+    -->
 
 		<!--	
             <div class="col-md-4 portfolio-item">
