--- a/spacex.html
+++ b/spacex.html
@@ -1,4 +1,4 @@
-<!--file:///Users/katherinepaseman/dropbox%20(mit)/Kat%20Portfolio/index.html -->
+
 <!DOCTYPE html>
 <html lang="en">
   <style>
@@ -32,9 +32,10 @@ img {
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <!--<link rel="icon" href="../Kat Portfolio/favicon.ico">-->
     <link rel = "icon" href = "favicon.ico">
 
-    <title>6.332 Motor Controller</title>
+    <title>SpaceX Internship</title>
 
     <!-- Bootstrap core CSS -->
     <link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -87,21 +88,31 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/motor setup.jpg" alt="Motor and encoder assembled" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/Starship.jpg" style="margin:40px -25px"  >         
  </div>
+        
+
         <div class="column">
           <br> <br> <br>
               <div class="header">
-                  <h1 style="margin:40px 0px">6.332 Advanced Power Electronics: FOC Motor Controller</h1>
-                <font size "1">fall '18 </font>
+                  <h1 style="margin:40px 0px">SpaceX Internship: Starship Power Electronics </h1>
+                <font size "1">summer '19 </font>
                     
-                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E>Motor control theory, firmware, PID control</font><br>
-				  <p>
-				  In the fall of 2018 I took 6.332, an extension of 6.334, Graduate Power Electronics. This class, like .334, had a final project however it was completely open-ended, the project just had to be related to power electronics. I chose to write the firmware for a three phase motor controller using field oriented control (FOC). Being on FSAE, I was always interested in how our off-the-shelf motor controllers worked and wanted to see if I could create my own. The project ended up being pretty time consuming with lots of bugs to chase out but eventually I got the motor to spin. I wrote up a report on FOC and my experiences and you can read it.t <a href="6.332 Report.pdf" target="_blank" ><u>here</u></a>. The motor used was a 650 kv propdrive motor, the microcontroller was an STM32F413 (the same used on FSAE), and the power electronics were embedded on a nucleo <a href="http://st.com/en/evaluation-tools/p-nucleo-ihm001.html" target="_blank"><u>shield</u></a>
-				  </p>
+                  <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Power Electronics Implementation, Analog Front Ends</font><br>
+
+                <p> 
+                    Made PCBs that helped get to space woot.
+				</p>
+
                   </div>
-	 </div>
+
+                  </div>
+
+             </div>
+
+
 </div>
+
 </div>
 
 
