Fixing starship.jpg typo

--- a/spacex.html
+++ b/spacex.html
@@ -88,7 +88,7 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/Starship.jpg" style="margin:40px -25px"  >         
+<img class="img-responsive" src="./pictures/starship.jpg" style="margin:40px -25px"  >         
  </div>
         
 
