Updating portfolio style and adding publications

--- a/info_me.html
+++ b/info_me.html
@@ -101,6 +101,10 @@ img {
                 <p > 
 Whether it be my dad’s supercharged mustang or different railways systems around the world, I’ve always been fascinated by moving energy around quickly and efficiently. I pursued a career in engineering because I wanted to push these systems to the theoretical limit.
 With my work, I enjoy targeting the largest bottlenecks in the performance of a given system in order to maximize improvement and progress. I’ve decided to focus on power electronics because as humanity strives to use more renewable resources and greener forms of transportation, power electronics seriously limit the performance, size, and cost in these systems. Fundamentally, nature works against us when we try to make power electronics better: packing more and more energy into tighter and tighter spaces is an ambitious goal, and it is one I want to push to the fundamental limit.
+
+<br>
+<br>
+Currently with Robert Pilawa at Berkeley I focus on high performance power electronics, focusing on hybrid switched capacitor and multilevel converters. More specifically my recent research efforts have involved the design, analysis, and implementation of the Flying Capacitor Multilevel (FCML) converter topology, with a focus on motor drive applications such as propulsion systems for electric aircraft.
 <!--
 Ever since I was young, I’ve always been fascinated by moving energy around quickly and efficiently. Whether it be my dad’s supercharged mustang or different railways from around the world, I have loved looking at and learning about how things move fast. I thought I wanted to study engineering because I wanted to learn how the mechanisms and systems that captured my attention worked. The more I learn the more I realize the reason I want to become an engineer is that I want to make these systems better. 
 <br><br>
