--- a/spacex.html
+++ b/spacex.html
@@ -99,10 +99,8 @@ img {
                 <font size "1">summer '19 </font>
                     
                   <p class="lead"> <font color=#000000> technical skills: </font> <font color=#7F7E7E> Power Electronics Implementation, Analog Front Ends</font><br>
+                    <p>Being a space, ITAR-restricted company I can't say too much about this internship but I worked on a fast-paced engineering team focusing on converter miniaturization! Specifically I reduced both size and cost of a valve driver circuit for the engine by >55% and verified performance with a prototype design.</p>
 
-                <p> 
-                    Made PCBs that helped get to space woot.
-				</p>
 
                   </div>
 
