--- a/index.html
+++ b/index.html
@@ -53,14 +53,43 @@
 
         <!-- Heading -->
         <div class="row">
-            <div class="col-md-10">
-                <h2>
-                <!--<h1 class="page-header">-->
-                    <img class="img-responsive" src="./pictures/RLEHeadshot - Crop.jpg" alt="Picture of Me" style="width:200px">         
-                    <small>
-                        Hello! I'm Rod Bayliss III. I'm a first year Ph.D. student working with Robert Pilawa designing high performance power electronics converters. You can e-mail me at <a href="mailto:rodbay@berkeley.edu"> rodbay@berkeley.edu</a>.
-                    </small>
-                </h2>
+            <div class="col-xs-4">
+                <br>
+                <img class="img-responsive" src="./pictures/RLEHeadshot - Crop.jpg" alt="Picture of Me" style="width:100%">         
+            </div>
+            <div class="col-xs-8">
+                <h1>
+                    <br>
+                        I'm a Hertz Fellow and Ph.D. student working with Robert Pilawa designing high performance power electronics converters at the University of California, Berkeley. 
+
+                        <br>
+                        <br>
+                </h1>
+                        <h2>
+                            143 Cory Hall <br>
+                            Univesity of California at Berkeley<br>
+                            Berkeley, CA 94720<br>
+                            <a href="mailto:rodbay@berkeley.edu"> rodbay@berkeley.edu</a>
+                        </h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Publications <small>Conference Papers</small>
+                </h1>
+                <body>
+                <ol>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/9829991">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
+                     <br>
+                     <li> <a href = "https://ieeexplore.ieee.org/document/9830006"><b>Fundamental State-Space Modeling Methodology for the Flying Capacitor Multilevel Converter</b></a><br> Nathan C. Brooks, Rahul K. Iyer, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
+                     <br>
+                    <li> <a href = "https://ieeexplore.ieee.org/document/9487301"><b>Design, Implementation, and Evaluation of High-Efficiency High-Power Radio-Frequency Inductors</b></a><br> Roderick S. Bayliss, Rachel S. Yang, Alex J. Hanson, Charles R. Sullivan, David J. Perreault. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
+                     <br>
+                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9487458"><b>A Multi-Phase Segmented Drive Comprising Arrayed Flying Capacitor Multi-Level Modules</b></a><br> Nathan Pallo, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2021</li>
+                     <br>
+                    <li> <a href = "https://ieeexplore-ieee-org.libproxy.berkeley.edu/document/9435213"><b>A Modular Multi-Phase Actively Controlled Resistive Load Bank with Zero-Current Switching Capability and Integrated Snubbers</b></a><br> Amanda Jackson, Nathan Pallo, Roderick S. Bayliss, Robert C.N. Pilawa-Podgurski. IEEE Power and Energy Conference at Illinois (PECI), 2021</li> 
+                </ol>
+            </body>
             </div>
         </div>
         <div class="row">
@@ -76,7 +105,7 @@
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./MEng.html">
-                    <img class="img-responsive" src="./pictures/ResonantTank.png">
+                    <img class="img-responsive" src="./pictures/ResonantTank.png" >
                 </a>
                 <h3>
                     <a href="./MEng.html">MIT Power Electronics Group M.Eng</a>
@@ -151,6 +180,7 @@
                 <p> 6.334 Design of a Buck Converter </p>
             </div>
         </div>
+        <!---
         <div class="row">
             <div class="col-md-10 portfolio-item">
                 <a href="./rle1.html">
@@ -162,7 +192,6 @@
 				<p>I researched high frequency magnetic materials for power electronic systems.</p>
             </div>
         </div>
-        <!---
 		<div class="row">
             <div class="col-md-4 portfolio-item">
                 <a href="chargingshutdownboard.html">
