Adding 2023 papers and updating headshot

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <div class="row">
             <div class="col-xs-4">
                 <br>
-                <img class="img-responsive" src="./pictures/RLEHeadshot - Crop.jpg" alt="Picture of Me" style="width:100%">         
+                <img class="img-responsive" src="./pictures/rb3_motor_newer_crop.JPG" alt="Picture of Me" style="width:100%">         
+                <!---<img class="img-responsive" src="./pictures/RLEHeadshot - Crop.jpg" alt="Picture of Me" style="width:100%">         -->
             </div>
             <div class="col-xs-8">
                 <h1>
@@ -79,6 +80,10 @@
                 </h1>
                 <body>
                 <ol>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10221009">A Combined Power Factor Correcting and Active Voltage Balancing Control Technique for Buck-Type AC/DC Grid-Tied Flying Capacitor Multilevel Converters</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 24th Workshop on Control and Modeling for Power Electronics (COMPEL), 2023</li>
+                     <br>
+                     <li> <b><a href = "https://ieeexplore.ieee.org/document/10131430">A Segmented Electric Aircraft Drivetrain Employing 10-Level Flying Capacitor Multi-Level Dual- Interleaved Power Modules</a></b> <br>Roderick S. Bayliss, Rahul K. Iyer, Richard Liou, Robert C. N. Pilawa-Podgurski. IEEE Applied Power Electronics Conference and Exposition (APEC), 2023</li>
+                     <br>
                      <li> <b><a href = "https://ieeexplore.ieee.org/document/9829991">On the Role of Switch Output Capacitance on Passive Balancing within the Flying Capacitor Multilevel Converter</a></b> <br>Roderick S. Bayliss, Nathan C. Brooks, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
                      <br>
                      <li> <a href = "https://ieeexplore.ieee.org/document/9830006"><b>Fundamental State-Space Modeling Methodology for the Flying Capacitor Multilevel Converter</b></a><br> Nathan C. Brooks, Rahul K. Iyer, Roderick S. Bayliss, Robert C. N. Pilawa-Podgurski. IEEE 23rd Workshop on Control and Modeling for Power Electronics (COMPEL), 2022</li>
