--- a/info_me.html
+++ b/info_me.html
@@ -88,7 +88,8 @@ img {
 <div class="column">
 
           <br> <br> <br>
-<img class="img-responsive" src="./pictures/RLEHeadshot.jpg" alt="" style="margin:40px -25px">         
+<img class="img-responsive" src="./pictures/rb3_motor_newer_crop.JPG" alt="" style="margin:40px -25px">         
+<!--<img class="img-responsive" src="./pictures/RLEHeadshot.jpg" alt="" style="margin:40px -25px">         -->
  </div>
         
 
